k8n/04-proxy.yaml
# 1. The Internal Network (DNS)
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
spec:
  # This tells the Service which pods to route traffic to
  selector:
    app: proxy
  ports:
    - port: 3001
      targetPort: 3001
---
# 2. The Actual Container
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
spec:
  # In the future, if you get lots of traffic, you can just change this number to 5 to run 5 servers!
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
        - name: proxy
          image: jklanica/ai-gatekeeper-proxy:latest
          # Always force Kubernetes to grab the newest :latest image from Docker Hub
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
