k8n/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-gatekeeper-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # If the URL starts with /v1 (e.g. http://localhost/v1/chat) send it to the Proxy!
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: proxy-service
                port:
                  number: 3001
          
          # If the URL is anything else (e.g. http://localhost/), send it to the Web app!
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 3000
